--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@
 footer {
   background: transparent;
   text-align: center;
+  font-style: bold;
 }
 
 #slashedlines {
@@ -66,11 +67,12 @@ h4 {
   float: right;
   font-weight: bold;
   font-family: Caveat, open-sans;
-  
-}
+  margin-right: 550px;
+  padding-right: 95px;
+  }
 
 #venessaImage {
-
+  float: left;
   width: 100%;
   height: 100%;
 }
